chore: add schema registry in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,26 +33,27 @@ services:
       KAFKA_JMX_PORT: 9101
       KAFKA_JMX_HOSTNAME: localhost
 
-# for future usage
-#  schema-registry:
-#    image: confluentinc/cp-schema-registry:7.5.0
-#    hostname: schema-registry
-#    container_name: schema-registry
-#    depends_on:
-#      - broker
-#    ports:
-#      - "8081:8081"
-#    environment:
-#      SCHEMA_REGISTRY_HOST_NAME: schema-registry
-#      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'broker:29092'
-#      SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
+  schema-registry:
+    image: confluentinc/cp-schema-registry:7.5.0
+    hostname: schema-registry
+    container_name: schema-registry
+    depends_on:
+      - broker
+    ports:
+      - "8081:8081"
+    environment:
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'broker:29092'
+      SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
 
   redpanda:
     image: docker.redpanda.com/redpandadata/console:v2.3.7
     container_name: redpanda
     depends_on:
-      - broker
+      - schema-registry
     ports:
       - "8088:8080"
     environment:
-      KAFKA_BROKERS: "broker:29092"
+      KAFKA_BROKERS: broker:29092
+      KAFKA_SCHEMAREGISTRY_ENABLED: 'true'
+      KAFKA_SCHEMAREGISTRY_URLS: http://schema-registry:8081
